<resources>
    <string name="app_name">Shopping App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attribute">Attribute</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">₺0,00</string>
    <string name="_1">1</string>
    <string name="sepete_ekle">Sepete Ekle</string>
    <string name="urunler">Ürünler</string>
    <string name="siparisi_tamamla">Siparişi Tamamla</string>
    <string name="price_format">₺%1$.2f</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="dialog_body">Dialog Body</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="cart_empty">Sepetiniz boş. Sepetim sayfasına gidebilmek ürün ekleyin.</string>
    <string name="urun_detay">Ürün Detayı</string>
    <string name="sepetim">Sepetim</string>
    <string name="onerilen_urunler">Önerilen Ürünler</string>
</resources>